--- a/app/views/products/_mixture.html.erb
+++ b/app/views/products/_mixture.html.erb
@@ -2,11 +2,12 @@
   <%= f.fields_for :order_lines, OrderLine.new do |ff| %>
     <% @product.variations.each do |product| %>
       <div class="comp">
-        <span class="title"><%= h(product.title) %></span>:
         <% if product.has_variations? %>
+          <span class="title"><%= h(product.title) %></span>:
           <% default = product.variations.detect { |v| v.is_default? } %>
           <%= ff.select(:product_ids, product.variations.map { |p| [p.title + (p.price.present? && p.price > 0 ? " + #{local_price(p.price, true)}" : ""), p.id] }, {:selected => default ? default.id : nil}, :name => "order[order_lines_attributes][0][product_ids][]") %>
         <% else %>
+          <span class="title"><%= h(product.title) %></span>?
           <input name="order[order_lines_attributes][0][product_ids][]" type="checkbox" value="<%= product.id %>" /> <%= product.price > 0 ? "(+ #{local_price(product.price, true)})" : "" %>
         <% end %>
       </div>
