--- a/app/views/products/_variations.html.erb
+++ b/app/views/products/_variations.html.erb
@@ -24,6 +24,7 @@
                 <%= f.fields_for :order_lines, OrderLine.new do |ff| %>
                   <%= ff.hidden_field :product_id, :value => product.id %>
                   <%= ff.text_field :quantity, :size => 4, :value => 0 %>
+                  &nbsp;<span class="add"></span><span class="remove"></span>
                 <% end %>
               </td>
             <% else %>
@@ -37,3 +38,5 @@
       <div id="variations-quantity-notice" class="notice" style="display: none;"><%= t(:please_select_quantity) %>.</div>
       <%= submit_tag t(:add_to_cart), :class => "button cart-add", :onclick => 'return verifyVariationsQuantity();' %>
     </div>
+
+    <%= javascript_tag "bindAddsRemoves()" %>
