--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,7 +32,7 @@
           <% end %>
         </li>
       <% else %>
-        <%= t(:out_of_stock) %>. <%= t(:let_us_know_if_you_want_the_product) %>.
+        <%= t(:out_of_stock) %>.
       <% end %>
     <% end %>
   </ul>
