--- a/app/views/homes/delivery.html.erb
+++ b/app/views/homes/delivery.html.erb
@@ -1,9 +1,9 @@
 <% title(I18n.t(:delivery_payment)) %>
 
 <p>Мы осуществляем доставку только по Кишиневу. Могу выслать почтой, только надо придумать как деньги передать.</p>
-<p>Время доставки: 10:00 - 18:00.<br />
+<p>Время работы и доставки: 10:00 - 18:00.<br />
   Стоимость доставки: <%= Order.delivery_cost %> лей</p>
-<p>Вы так-же можете сами забрать заказ: <%= link_to 'куда ехать', contacts_home_path %>.</p>
+<p><strong>Вы можете сами забрать заказ</strong>: <%= link_to 'куда ехать', contacts_home_path %>.</p>
 
 <h3><%= I18n.t(:payment) %></h3>
 <p>Оплата осуществляется при получении товара.</p>
