--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div id="header">
       <div id="logo">
 	<h1><a href="/">ecigs.md</a></h1>
-	<h2><a href="/">интернет магазин электронных сигарет в Молдове</a></h2>
+	<h2><a href="/">Интернет магазин электронных сигарет в Молдове</a></h2>
       </div>
       <!-- end div#logo -->
       <div id="menu">
