--- a/app/views/products/_mixture.html.erb
+++ b/app/views/products/_mixture.html.erb
@@ -6,7 +6,7 @@
           <span class="title"><%= h(product.title) %></span>:
           <% default = product.variations.in_stock.detect { |v| v.is_default? } %>
           <%= ff.select(:product_ids, product.variations.in_stock.map { |p| [p.title + (p.price.present? && p.price > 0 ? " +#{local_price(p.price, true)}" : ""), p.id] }, {:selected => default ? default.id : nil}, :name => "order[order_lines_attributes][0][product_ids][]") %>
-        <% else %>
+        <% elsif product.quantity > 0 %>
           <label for="product-<%= product.id %>"><%= h(product.title) %>?</label>
           <input id="product-<%= product.id %>" name="order[order_lines_attributes][0][product_ids][]" type="checkbox" value="<%= product.id %>" /> <%= product.price > 0 ? "(+#{local_price(product.price, true)})" : "" %>
         <% end %>
