--- a/app/views/homes/delivery.html.erb
+++ b/app/views/homes/delivery.html.erb
@@ -1,6 +1,10 @@
 <% title(I18n.t(:delivery_payment)) %>
 
-<p>Мы осуществляем доставку только по Кишиневу. Могу выслать почтой, только надо придумать как деньги передать.</p>
+<% if Order.delivery_off? %>
+  <p><strong>Доставка временно не работает.</strong></p>
+<% end %>
+
+<p>Доставка только по Кишиневу. Могу выслать почтой, только надо придумать как деньги передать.</p>
 <p>Время работы и доставки: 10:00 - 18:00.<br />
   Стоимость доставки: <%= Order.delivery_cost %> лей</p>
 <p><strong>Вы можете сами забрать заказ</strong>: <%= link_to 'куда ехать', contacts_home_path %>.</p>
