order reports page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,7 @@
               <%= link_to "Wiki", wiki_pages_path %>
               <%= link_to "Add wiki", new_wiki_page_path %>
               <%= link_to "Orders", admin_orders_path %>
+              <%= link_to "Order report", report_admin_orders_path %>
               <%= link_to "Comments", admin_comments_path %>
             </div>
             <div class="cut"></div>
