--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
           <% if is_admin? %>
             <div class="admin-tabs">
               <%= link_to "Add product", new_product_path %>
-              <%= link_to "Disco. products", :discontinued => true %>
+              <%= link_to "Discontinued", :discontinued => true %>
               <%= link_to "Wiki", wiki_pages_path %>
               <%= link_to "Add wiki", new_wiki_page_path %>
               <%= link_to "Orders", admin_orders_path %>
