--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -35,10 +35,7 @@
 <script type="text/javascript">
     $('submit-delivered').observe('click', function(event) {
         $$('#order_status option').each(function(ele) {
-            ele.selected = false;
-           if (ele.value == 2) {
-                ele.selected = true;
-            }
+           ele.value == 2 ? ele.selected = true : ele.selected = false;
         });
     });
 </script>
