highlight out of stock notice

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,7 +33,7 @@
         </li>
       <% end %>
     <% else %>
-      <%= t(:out_of_stock) %>.
+      <li><p class="out-of-stock"><%= t(:out_of_stock) %>.</p></li>
     <% end %>
   </ul>
   <div class="cut"></div>
