--- a/app/views/admin/orders/report.html.erb
+++ b/app/views/admin/orders/report.html.erb
@@ -27,9 +27,13 @@
             <br /><%= h(ol.product.title) %>
           <% end %>
         </td>
-        <td><%= ol.sold %> * <%= ol.avg_unit_price %></td>
-        <td><%= ol.total %></td>
+        <td><%= ol.ol_sold_qty %> * <%= ol.ol_avg_price %></td>
+        <td><%= ol.ol_total %></td>
       </tr>
     <% end %>
+    <tr>
+      <td colspan="3"></td>
+      <td><strong><%= @total %></strong></td>
+    </tr>
   </table>
 </div>
