freeze the site

--- a/app/views/homes/delivery.html.erb
+++ b/app/views/homes/delivery.html.erb
@@ -7,7 +7,7 @@
 <p>Доставка только по Кишиневу. Могу выслать почтой, только надо придумать как деньги передать.</p>
 <p>Время работы и доставки: 10:00 - 18:00.<br />
   Стоимость доставки: <%= Order.delivery_cost %> лей</p>
-<p><strong>Вы можете сами забрать заказ</strong>: <%= link_to 'куда ехать', contacts_home_path %>.</p>
+<!-- <p><strong>Вы можете сами забрать заказ</strong>: <%= link_to 'куда ехать', contacts_home_path %>.</p> -->
 
 <h3><%= I18n.t(:payment) %></h3>
 <p>Оплата осуществляется при получении товара.</p>
